err
g++ -ggdb -o bruinbase main.cc SqlParser.tab.c lex.sql.c SqlEngine.cc BTreeIndex.cc BTreeNode.cc RecordFile.cc PageFile.cc 
BTreeIndex.cc: In member function ‘RC BTreeIndex::open(const string&, char)’:
BTreeIndex.cc:39:35: error: ‘memset’ was not declared in this scope
   memset(buffer, 0, sizeof(buffer));
                                   ^
BTreeIndex.cc:41:39: error: ‘memcpy’ was not declared in this scope
   memcpy(buffer, &root, sizeof(PageId));
                                       ^
BTreeIndex.cc:48:35: error: ‘memset’ was not declared in this scope
   memset(buffer, 0, sizeof(buffer));
                                   ^
BTreeIndex.cc:50:42: error: ‘memcpy’ was not declared in this scope
   memcpy(&rootPid, buffer, sizeof(PageId));
                                          ^
BTreeIndex.cc: In member function ‘RC BTreeIndex::insert_into_parent(int, PageId, int, PageId)’:
BTreeIndex.cc:115:21: error: ‘endpid’ was not declared in this scope
   PageId r = endpid();
                     ^
BTreeIndex.cc: In member function ‘RC BTreeIndex::locate(int, IndexCursor&)’:
BTreeIndex.cc:163:5: error: ‘rootpid’ was not declared in this scope
  if(rootpid == -1)
     ^
BTreeNode.cc: In member function ‘int BTLeafNode::getKeyCount()’:
BTreeNode.cc:48:38: error: ‘memcpy’ was not declared in this scope
  memcpy(&count, buffer, sizeof(count));
                                      ^
BTreeNode.cc: In member function ‘RC BTLeafNode::insert(int, const RecordId&)’:
BTreeNode.cc:74:74: error: ‘memcpy’ was not declared in this scope
  memcpy(buffer+startPos+ENTRY_SIZE, buffer+startPos, (count-i)*ENTRY_SIZE);
                                                                          ^
BTreeNode.cc: In member function ‘RC BTLeafNode::insertAndSplit(int, const RecordId&, BTLeafNode&, int&)’:
BTreeNode.cc:123:38: error: ‘memcpy’ was not declared in this scope
  memcpy(buffer, &count, sizeof(count));
                                      ^
BTreeNode.cc: In member function ‘RC BTLeafNode::locate(int, int&)’:
BTreeNode.cc:148:68: error: ‘memcpy’ was not declared in this scope
   memcpy(&curKey, buffer+sizeof(count)+ENTRY_SIZE*i, sizeof(curKey));
                                                                    ^
BTreeNode.cc: In member function ‘RC BTLeafNode::readEntry(int, int&, RecordId&)’:
BTreeNode.cc:176:63: error: ‘memcpy’ was not declared in this scope
  memcpy(&key, buffer+sizeof(count)+ENTRY_SIZE*eid, sizeof(key));
                                                               ^
BTreeNode.cc: In member function ‘PageId BTLeafNode::getNextNodePtr()’:
BTreeNode.cc:188:58: error: ‘memcpy’ was not declared in this scope
  memcpy(&pid, buffer+BUFFER_SIZE-sizeof(pid), sizeof(pid));
                                                          ^
BTreeNode.cc: In member function ‘RC BTLeafNode::setNextNodePtr(PageId)’:
BTreeNode.cc:199:58: error: ‘memcpy’ was not declared in this scope
  memcpy(buffer+BUFFER_SIZE-sizeof(pid), &pid, sizeof(pid));
                                                          ^
BTreeNode.cc: In constructor ‘BTLeafNode::BTLeafNode()’:
BTreeNode.cc:205:34: error: ‘memset’ was not declared in this scope
  memset(buffer, 0, sizeof(buffer));
                                  ^
BTreeNode.cc:207:38: error: ‘memcpy’ was not declared in this scope
  memcpy(buffer, &count, sizeof(count));
                                      ^
BTreeNode.cc: In constructor ‘BTNonLeafNode::BTNonLeafNode()’:
BTreeNode.cc:222:34: error: ‘memset’ was not declared in this scope
  memset(buffer, 0, sizeof(buffer));
                                  ^
BTreeNode.cc:224:38: error: ‘memcpy’ was not declared in this scope
  memcpy(buffer, &count, sizeof(count));
                                      ^
BTreeNode.cc: In member function ‘int BTNonLeafNode::getKeyCount()’:
BTreeNode.cc:256:38: error: ‘memcpy’ was not declared in this scope
  memcpy(&count, buffer, sizeof(count));
                                      ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::insert(int, PageId)’:
BTreeNode.cc:275:90: error: ‘memcpy’ was not declared in this scope
   memcpy(&curKey, buffer+sizeof(count)+NONLEAF_ENTRY_SIZE*eid+sizeof(pid), sizeof(curKey));
                                                                                          ^
BTreeNode.cc:285:33: error: ‘memcpy’ was not declared in this scope
   NONLEAF_ENTRY_SIZE*(count-eid));
                                 ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::insertAndSplit(int, PageId, BTNonLeafNode&, int&)’:
BTreeNode.cc:316:90: error: ‘memcpy’ was not declared in this scope
   memcpy(&curKey, buffer+sizeof(count)+NONLEAF_ENTRY_SIZE*eid+sizeof(pid), sizeof(curKey));
                                                                                          ^
BTreeNode.cc:327:33: error: ‘memcpy’ was not declared in this scope
   NONLEAF_ENTRY_SIZE*(count-eid));
                                 ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::locateChildPtr(int, PageId&)’:
BTreeNode.cc:374:90: error: ‘memcpy’ was not declared in this scope
   memcpy(&curKey, buffer+sizeof(count)+NONLEAF_ENTRY_SIZE*eid+sizeof(pid), sizeof(curKey));
                                                                                          ^
BTreeNode.cc:381:73: error: ‘memcpy’ was not declared in this scope
  memcpy(&pid, buffer+sizeof(count)+NONLEAF_ENTRY_SIZE*count, sizeof(pid));
                                                                         ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::initializeRoot(PageId, int, PageId)’:
BTreeNode.cc:396:38: error: ‘memcpy’ was not declared in this scope
  memcpy(buffer, &count, sizeof(count));
                                      ^
make: *** [bruinbase] Error 1
